<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    ****************************************************************************
  ~    Copyright (c) 2015, MasterCard International Incorporated and/or its
  ~    affiliates. All rights reserved.
  ~    <p/>
  ~    The contents of this file may only be used subject to the MasterCard
  ~    Mobile Payment SDK for MCBP and/or MasterCard Mobile MPP UI SDK
  ~    Materials License.
  ~    <p/>
  ~    Please refer to the file LICENSE.TXT for full details.
  ~    <p/>
  ~    TO THE EXTENT PERMITTED BY LAW, THE SOFTWARE IS PROVIDED "AS IS", WITHOUT
  ~    WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
  ~    WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~    NON INFRINGEMENT. TO THE EXTENT PERMITTED BY LAW, IN NO EVENT SHALL
  ~    MASTERCARD OR ITS AFFILIATES BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
  ~    FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
  ~    IN THE SOFTWARE.
  ~    *****************************************************************************
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Big divider (my cart) -->
    <TextView
        android:id="@+id/txt_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_bg"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/txt_cart"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/header" />

    <!-- Basket -->
    <com.mastercard.mymerchant.widget.FullListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_cart"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:listSelector="@android:color/transparent" />

    <!-- Big divider (summary) -->
    <TextView
        android:id="@+id/txt_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/list"
        android:background="@color/header_bg"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/txt_summary"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/header" />

    <!-- Subtotal label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_summary"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/lbl_subtotal" />

    <!-- Subtotal price -->
    <TextView
        android:id="@+id/txt_subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/txt_summary"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/placeholder_subtotal"
        android:textColor="@color/sub_header" />

    <!-- Divider line -->
    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/txt_subtotal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#000000" />

    <!-- Tax label -->
    <TextView
        android:id="@+id/lbl_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider1"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/lbl_tax" />

    <!-- Tax value -->
    <TextView
        android:id="@+id/txt_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/divider1"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/placeholder_tax"
        android:textColor="@color/sub_header" />

    <!-- Divider line -->
    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/txt_tax"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#000000" />

    <RelativeLayout
        android:id="@+id/lay_discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/divider5"
        android:visibility="gone">

        <!-- Discount label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/lbl_discount"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <!-- Discount price -->
        <TextView
            android:id="@+id/txt_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/placeholder_discount"
            android:textColor="@color/sub_header" />

        <!-- Divider line -->
        <View
            android:id="@+id/dividerdiscount"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/txt_discount"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="#000000" />

    </RelativeLayout>

    <!-- Shipping label -->
    <TextView
        android:id="@+id/lbl_shipping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay_discount"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/lbl_shipping" />

    <!-- Shipping price -->
    <TextView
        android:id="@+id/txt_shipping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/lay_discount"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/placeholder_shipping"
        android:textColor="@color/sub_header" />

    <!-- Divider line -->
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/txt_shipping"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#000000" />

    <!-- Total label -->
    <TextView
        android:id="@+id/lbl_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/divider2"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/lbl_total"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/sub_header" />

    <!-- Total price -->
    <TextView
        android:id="@+id/txt_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/divider2"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/placeholder_total"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/sub_header" />

    <!-- Divider line -->
    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/txt_total"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#000000" />
</merge>